@startuml Final

class Usuario {
    -Nombre: String
    -Contraseña: String

    -Logueo(): void
    -CerrarSesion(): void

}

class Administrador {
    -Nombre: String
    -Cedula: String

    -GestionarClubes(): void
    -GestionarJugadores(): void
    -GestionarEntrenadores(): void
    -GestionarPartidos(): void
    -GestionarHorarios(): void
    -GestionarFechasPartidos(): void
    -GestionarResultadosPartidos(): void
    -GestionarSanciones(): void

}

class Club {
    -NombreClub: String
    -NombrePresidente: String
    -NombreEntrenador: String
    -NombresJugadores: String

    -GestionarJugadores(): void
    -GestionarEntrenador(): void
    
    
}

class Jugador {
    -Nombre: String
    -Apellido: String
    -Cedula: String
    -Posicion: String

}
Usuario <|-- Administrador: Loguea
Usuario <|-- Club: Loguea
Administrador "1" -right- "0..*" Club: Gestiona
Club "1" -down- "0..*" Jugador: Tiene

@enduml